# Ground-truth

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
\~/.gemini_plans/: plan.md
data/marks/: gt_001.csv  gt_011.csv  gt_017.csv  gt_032.csv  gt_038.csv  gt_042.csv  gt_044.csv  gt_048.csv  gt_056.csv  gt_057.csv  gt_058.csv
docs/superpowers/plans/: 2026-04-26-ground-truth-batch-implementation.md
docs/superpowers/specs/: 2026-04-26-ground-truth-batch-design.md
project/: .gitignore  README.md  requirements.txt
project/data/: vertex_ai_gemini_setup.docx
project/data/marks/: gt_010.csv  gt_023.csv  gt_026.csv  gt_028.csv  gt_039.csv  gt_055.csv  gt_060.csv
project/src/: app.py  llm_mapper.py  utils.py
src/: app.py  batch_processor.py  llm_mapper.py  utils.py
tests/: test_batch_processor_recursive.py  test_batch_processor_worker.py  test_llm_mapper.py  test_utils.py
